Sun Oct 10 09:59:01 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am: Add coverage-reconfigure-maintainer-mode target which
	  is just like coverage-reconfigure except it also passes
	  --enable-maintainer-mode.

Sun Oct 10 07:29:23 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Check Stem("none") too.  Check
	  Stem("").get_description().  No need to check a bogus language name
	  here as stemlangs2 now does that.

Sun Oct 10 07:22:41 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_stem.cc: Test an invalid languages name with each possible
	  byte value at the start to improve coverage of the switch in
	  api/stem.cc.

Sun Oct 10 06:14:42 GMT 2010  Olly Betts <olly@survex.com>

	* unicode/utf8itor.cc: Correct comments and use bad_cont() in another
	  place (no change to code once inlining is taken into account).

Sun Oct 10 06:11:05 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc: Improve test coverage for
	  Utf8Iterator::calculate_sequence_length().

Sun Oct 10 00:33:49 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc: Tweak testcase utf8iterator2 to add coverage
	  for Utf8Iterator(const char *).

Fri Oct 08 13:10:08 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/selectpostlist.cc,matcher/selectpostlist.h: Implement
	  SelectPostList::check() so that check() on OP_NEAR and OP_PHRASE
	  subqueries won't end up checking potentially huge numbers of
	  documents.

Fri Oct 08 12:29:50 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Add testcase phrase3 to provide coverage for
	  SelectPostList::skip_to().

Fri Oct 08 10:36:18 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/orpostlist.cc,matcher/orpostlist.h: Fix performance
	  regression in some cases caused by the introduction of
	  OrPostList::check().

Thu Oct 07 03:53:11 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Clear tout before each iteration in scaleweight1.
